After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 706041 - Fixes for the rfkill plugin
Fixes for the rfkill plugin
Status: RESOLVED FIXED
Product: gnome-settings-daemon
Classification: Core
Component: general
unspecified
Other All
: Normal normal
: ---
Assigned To: gnome-settings-daemon-maint
gnome-settings-daemon-maint
Depends on:
Blocks:
 
 
Reported: 2013-08-15 01:16 UTC by Jasper St. Pierre (not reading bugmail)
Modified: 2013-08-16 17:38 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
rfkill: Account for having zero rfkill switches for airplane mode (1.68 KB, patch)
2013-08-15 01:23 UTC, Jasper St. Pierre (not reading bugmail)
committed Details | Review
rfkill: Add a new property to determine whether we can toggle airplane mode (3.92 KB, patch)
2013-08-15 01:23 UTC, Jasper St. Pierre (not reading bugmail)
committed Details | Review

Description Jasper St. Pierre (not reading bugmail) 2013-08-15 01:16:53 UTC
Discovered in testing.
Comment 1 Jasper St. Pierre (not reading bugmail) 2013-08-15 01:23:50 UTC
Created attachment 251673 [details] [review]
rfkill: Account for having zero rfkill switches for airplane mode

This is the case in desktops and VMs.
Comment 2 Jasper St. Pierre (not reading bugmail) 2013-08-15 01:23:57 UTC
Created attachment 251675 [details] [review]
rfkill: Add a new property to determine whether we can toggle airplane mode

On some systems like desktops or VMs, we have no rfkill switches to toggle,
so we shouldn't show any switches in the control center.
Comment 3 Matthias Clasen 2013-08-16 16:07:15 UTC
Review of attachment 251673 [details] [review]:

Probably best to just commit the relevant change, and leave out the refactoring until Bastien comes back.

::: plugins/rfkill/gsd-rfkill-manager.c
@@ +103,3 @@
+        if (g_hash_table_size (manager->priv->killswitches) == 0) {
+                return FALSE;
+        }

This is the relevant change

@@ +117,1 @@
 	}

This looks like an unrelated refactoring. No opinion on it.
Comment 4 Matthias Clasen 2013-08-16 16:08:32 UTC
Review of attachment 251675 [details] [review]:

Looks fine to me.
Comment 5 Matthias Clasen 2013-08-16 16:08:42 UTC
Review of attachment 251675 [details] [review]:

Looks fine to me.
Comment 6 Jasper St. Pierre (not reading bugmail) 2013-08-16 17:37:55 UTC
Attachment 251673 [details] pushed as 6d5774b - rfkill: Account for having zero rfkill switches for airplane mode
Attachment 251675 [details] pushed as 2c09798 - rfkill: Add a new property to determine whether we can toggle airplane mode