rfkill: Account for having zero rfkill switches for airplane mode

This is the case in desktops and VMs.

https://bugzilla.gnome.org/show_bug.cgi?id=706041